update monthed map list